# occur

./: Cargo.toml  rustfmt.toml
occur/: Cargo.toml  clippy.toml
occur-scylla/: Cargo.toml
occur/src/: entity.rs  error.rs  event.rs  lib.rs  revision.rs  serializer.rs
occur/src/store/: commit.rs  inmem.rs  mod.rs  read.rs  serialization.rs  write.rs
occur/src/store/inmem/: mod.rs  read.rs  serialization.rs  write.rs
occur/tests/: fiddle.rs  revision.rs
occur/tests/example/: mod.rs
src/: commit_number.rs  committed_event.rs  entity.rs  event.rs  iterator.rs  lib.rs  main.rs  recorded_event.rs  ref_.rs  revision.rs  stream.rs  stream_desc.rs  time.rs  types.rs  version.rs
src/repo/: error.rs  fake.rs  mod.rs  repository.rs
src/store/: commit.rs  committed_event.rs  error.rs  inmem.rs  mod.rs  read.rs  stream.rs
tests/: entity.rs  event.rs  fiddle.rs  init.rs  revision.rs
tests/example/: mod.rs  user.rs
tests/example/event/: mod.rs
tests/example/old_revision/: user.rs
tests/fixture/: mod.rs  user.rs
