[package]
name = "event_sourcing"
version = "0.1.0"
description = "TBD"
repository = "https://github.com/bayov/event_sourcing"
readme = "README.md"
license = "PRIVATE"
edition = "2021"
keywords = ["event", "event-sourcing"]
categories = ["data-structures"]

[dependencies]
async-channel = "2.1.0"
derive_more = { version = "1.0.0-beta.6", features = ["display", "index"] }
futures = { version = "0.3.29", features = ["thread-pool"] }
futures-locks = "0.7.1"
thiserror = "1.0.50"

[features]
backtrace = []

[dev-dependencies]
rstest = "0.18.2"
